--- a/package.json
+++ b/package.json
@@ -1,29 +1,42 @@
 {
-  "name": "hoan-ui",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "build": "next build",
-    "dev": "next dev --turbo",
-    "start": "next start",
-    "postinstall": "fumadocs-mdx"
-  },
-  "dependencies": {
-    "next": "15.3.3",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "fumadocs-ui": "15.5.3",
-    "fumadocs-core": "15.5.3",
-    "fumadocs-mdx": "11.6.9"
-  },
-  "devDependencies": {
-    "@types/node": "24.0.1",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
-    "typescript": "^5.8.3",
-    "@types/mdx": "^2.0.13",
-    "@tailwindcss/postcss": "^4.1.10",
-    "tailwindcss": "^4.1.10",
-    "postcss": "^8.5.5"
-  }
+	"name": "fumadocs-shadcnui-registry",
+	"version": "0.0.0",
+	"private": true,
+	"scripts": {
+		"build": "next build",
+		"dev": "next dev --turbo",
+		"start": "next start",
+		"postinstall": "fumadocs-mdx",
+		"biome:check": "biome check app",
+		"biome:fix": "pnpm exec biome check --write --unsafe app"
+	},
+	"dependencies": {
+		"@radix-ui/react-dialog": "^1.1.14",
+		"@radix-ui/react-label": "^2.1.4",
+		"@radix-ui/react-scroll-area": "^1.2.9",
+		"@radix-ui/react-slot": "^1.2.0",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"fumadocs-core": "15.5.3",
+		"fumadocs-mdx": "11.6.9",
+		"fumadocs-ui": "15.5.3",
+		"lucide-react": "^0.522.0",
+		"next": "15.3.3",
+		"react": "^19.1.0",
+		"react-dom": "^19.1.0",
+		"tailwind-merge": "^3.3.1",
+		"zod": "^3.25.67"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "^2.0.4",
+		"@tailwindcss/postcss": "^4.1.10",
+		"@types/mdx": "^2.0.13",
+		"@types/node": "24.0.1",
+		"@types/react": "^19.1.8",
+		"@types/react-dom": "^19.1.6",
+		"postcss": "^8.5.5",
+		"tailwindcss": "^4.1.10",
+		"tw-animate-css": "^1.3.4",
+		"typescript": "^5.8.3"
+	}
 }
