--- a/package.json
+++ b/package.json
@@ -1,42 +1,53 @@
 {
-	"name": "fumadocs-shadcnui-registry",
-	"version": "0.0.0",
-	"private": true,
-	"scripts": {
-		"build": "next build",
-		"dev": "next dev --turbo",
-		"start": "next start",
-		"postinstall": "fumadocs-mdx",
-		"biome:check": "biome check app",
-		"biome:fix": "pnpm exec biome check --write --unsafe app"
-	},
-	"dependencies": {
-		"@radix-ui/react-dialog": "^1.1.14",
-		"@radix-ui/react-label": "^2.1.4",
-		"@radix-ui/react-scroll-area": "^1.2.9",
-		"@radix-ui/react-slot": "^1.2.0",
-		"class-variance-authority": "^0.7.1",
-		"clsx": "^2.1.1",
-		"fumadocs-core": "15.5.3",
-		"fumadocs-mdx": "11.6.9",
-		"fumadocs-ui": "15.5.3",
-		"lucide-react": "^0.522.0",
-		"next": "15.3.3",
-		"react": "^19.1.0",
-		"react-dom": "^19.1.0",
-		"tailwind-merge": "^3.3.1",
-		"zod": "^3.25.67"
-	},
-	"devDependencies": {
-		"@biomejs/biome": "^2.0.4",
-		"@tailwindcss/postcss": "^4.1.10",
-		"@types/mdx": "^2.0.13",
-		"@types/node": "24.0.1",
-		"@types/react": "^19.1.8",
-		"@types/react-dom": "^19.1.6",
-		"postcss": "^8.5.5",
-		"tailwindcss": "^4.1.10",
-		"tw-animate-css": "^1.3.4",
-		"typescript": "^5.8.3"
-	}
+  "name": "fumadocs-shadcnui-registry-template",
+  "version": "1.0.0",
+  "private": false,
+  "scripts": {
+    "build": "next build",
+    "dev": "next dev --turbopack",
+    "start": "next start",
+    "postinstall": "fumadocs-mdx",
+    "lint": "prettier --check .",
+    "format": "prettier --write .",
+    "registry:build": "shadcn build"
+  },
+  "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-label": "^2.1.4",
+    "@radix-ui/react-scroll-area": "^1.2.9",
+    "@radix-ui/react-slot": "^1.2.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "fumadocs-core": "15.5.3",
+    "fumadocs-mdx": "11.6.9",
+    "fumadocs-ui": "15.5.3",
+    "lucide-react": "^0.522.0",
+    "next": "15.4.4",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "shadcn": "2.4.0-canary.12",
+    "tailwind-merge": "^3.3.1",
+    "zod": "^3.25.67"
+  },
+  "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.10",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+    "@types/mdx": "^2.0.13",
+    "@types/node": "24.0.1",
+    "@types/react": "19.1.8",
+    "@types/react-dom": "19.1.6",
+    "eslint-config-prettier": "^10.1.8",
+    "postcss": "^8.5.5",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
+    "tailwindcss": "^4.1.10",
+    "tw-animate-css": "^1.3.4",
+    "typescript": "^5.8.3"
+  },
+  "pnpm": {
+    "overrides": {
+      "@types/react": "19.1.8",
+      "@types/react-dom": "19.1.6"
+    }
+  }
 }
