--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "start": "next start",
     "postinstall": "fumadocs-mdx",
     "lint": "prettier --check .",
+    "lint:fix": "prettier --write . && eslint . --fix",
     "format": "prettier --write .",
-    "registry:build": "shadcn build"
+    "registry:build": "shadcn build",
+    "prepare": "husky"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.14",
@@ -36,7 +38,11 @@
     "@types/node": "24.0.1",
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
+    "eslint": "^9.32.0",
+    "eslint-config-next": "^15.4.4",
     "eslint-config-prettier": "^10.1.8",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.1.2",
     "postcss": "^8.5.5",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
@@ -49,5 +55,14 @@
       "@types/react": "19.1.8",
       "@types/react-dom": "19.1.6"
     }
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,mjs}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{json,md,mdx,css,html,yml,yaml}": [
+      "prettier --write"
+    ]
   }
 }
